--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,17 @@
 }
 
 body {
+    padding: 1em;
     font: 100% Arial, sans-serif;
 }
 
+ul {
+    max-width: 640px;
+    margin: 0 auto;
+}
+
 li {
+    margin-bottom: 0.25em;
     padding: 1em;
     border: 1px solid #eee;
     background: #fafafa;
@@ -32,7 +39,6 @@ li {
 
 .btn:active {
     box-shadow: inset 0 4px 6px -2px hsla(0, 0%, 0%, 0.1);
-    background-image: none;
 }
 
 .btn--primary {
