--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,8 @@
 }
 
 body {
-    max-width: 640px;
-    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
     padding: 1em;
     color: #444;
     font: 100% Arial, sans-serif;
@@ -16,16 +16,27 @@ h2 {
     margin-bottom: 20px;
 }
 
+h3 {
+    margin-bottom: 10px;
+    font-weight: normal;
+    font-size: 1rem;
+}
+
 ul {
     margin-bottom: 50px;
 }
 
 li {
-    margin-bottom: 0.25em;
-    padding: 1em;
+    margin-bottom: 0.5em;
+    padding: 0.5em;
     border: 1px solid #eee;
     background: #fafafa;
     list-style: none;
+}
+
+section {
+    flex: 1 0 200px;
+    margin: 0.5em;
 }
 
 .btn {
